--- a/app/src/main/res/layout/button_fragment.xml
+++ b/app/src/main/res/layout/button_fragment.xml
@@ -16,7 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:padding="12dp"
+            android:stateListAnimator="@null"
             android:textAllCaps="false"
+            android:textSize="16sp"
             app:cornerRadius="20dp" />
 
         <com.google.android.material.button.MaterialButton
@@ -25,7 +28,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:padding="12dp"
+            android:stateListAnimator="@null"
             android:textAllCaps="false"
+            android:textSize="16sp"
             android:visibility="invisible"
             app:cornerRadius="20dp" />
 
@@ -35,7 +41,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:padding="12dp"
+            android:stateListAnimator="@null"
             android:textAllCaps="false"
+            android:textSize="16sp"
             android:visibility="invisible"
             app:cornerRadius="20dp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
