--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -42,6 +42,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/default_time"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="56sp"
+            android:typeface="monospace"
+            app:layout_constraintBottom_toBottomOf="@id/ref"
+            app:layout_constraintEnd_toEndOf="@id/ref"
+            app:layout_constraintStart_toStartOf="@id/ref"
+            app:layout_constraintTop_toTopOf="@id/ref" />
+
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/target"
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
@@ -77,7 +91,7 @@
             android:id="@+id/buttonGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/timer_horizontal_margin"
+            android:layout_marginTop="@dimen/timer_horizontal_margin_half"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ref" />
