--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
 
     <dimen name="timer_vertical_margin">48dp</dimen>
     <dimen name="timer_horizontal_margin">48dp</dimen>
+    <dimen name="timer_horizontal_margin_half">24dp</dimen>
 
     <item name="timer_dias" type="dimen" format="float">0.4</item>
 </resources>
