--- a/app/src/main/res/layout/dialog_add_target.xml
+++ b/app/src/main/res/layout/dialog_add_target.xml
@@ -19,7 +19,10 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/target"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <requestFocus />
+        </com.google.android.material.textfield.TextInputEditText>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -38,7 +41,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:layout_weight="1">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -52,9 +54,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="6dp"
             android:gravity="center"
-            android:paddingHorizontal="4dp"
+            android:paddingHorizontal="8dp"
             android:text="@string/hour"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             android:textStyle="bold" />
@@ -63,7 +65,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:layout_weight="1">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -77,13 +78,32 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="6dp"
             android:gravity="center"
-            android:paddingHorizontal="4dp"
+            android:paddingHorizontal="8dp"
             android:text="@string/minute"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             android:textStyle="bold" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/target_type" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            android:id="@+id/type"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:height="55dp"
+            android:inputType="none" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
